# AI-developer

./: .env  .gitignore  README.md  docker-compose.ai-developer.yml  docker-compose.yml  enc.env
.devcontainer/ai-developer-container/: devcontainer.json
ai-developer/: .dockerignore  Dockerfile  README.md  evaluate.py  graph.mmd  langgraph.json  langgraph_app.py  main.py  pyproject.toml  requirements.txt  todo
ai-developer/app/application/use_cases/: generate_backend_code.py
ai-developer/app/domain/entities/: code_generation.py
ai-developer/app/domain/interfaces/: code_repository.py  llm_gateway.py
ai-developer/app/infrastructure/llm/: ollama_agent.py
ai-developer/app/infrastructure/repositories/: file_code_repository.py
ai-developer/app/interfaces/cli/: cli_handler.py
