[project]
name = "ai-developer"
version = "0.1.0"
description = ""
authors = [
    {name = "Josue",email = "josueeliashuaman@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain",
    "langchain-ollama",
    "langchain-core",
    "langgraph",
    "langsmith",
    "deepagents",
    "pydantic",
]

[dependency-groups]
dev = [
    "black",
    "langgraph-cli[inmem]",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false